--- a/css/base.css
+++ b/css/base.css
@@ -1,2 +1,4 @@
-/* CSS Document */
-
+/* 要注意表单元素并不继承父级 font 的问题 */
+body, button, input, select, textarea {
+    font: 12px/1.5 \5FAE\8F6F\96C5\9ED1, \5b8b\4f53, Arial, Helvetica, Sans-Serif;
+}
